# py2tensor

./: LICENSE  MANIFEST.in  README.md  __init__.py  adaptive_attention.py  api.py  api_model.pt  app_hypersearch.py  app_trading.py  assembly_full_gpu.py  assembly_tensorized.py  auto_compress.py  bench_all_5.py  bench_cpu_vs_gpu_proper.py  bench_final.py  bench_model_compile.py  bench_triton_full.py  bench_triton_iter.py  compress_model.py  cpu_to_gpu.py  custom_net.pt  debug_dt.py  debug_minmax.py  debug_rocket.py  demo_api.py  demo_neural_net.py  demo_practical.py  demos.py  everything_is_matrix.py  final_benchmark.py  final_showcase.py  holy_grail.pt  integrations.py  model_backend.py  newton_model.pt  one_minute_demo.py  piecewise_compress.py  piecewise_nd.py  pure_model.py  pure_newton.pt  (+54 more)
py2tensor/: __init__.py  api.py  core.py  diagnostics.py  pure.py
